--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
 {
     "version": 2,
     "builds": [{"src": "./index.js", "use": "@vercel/node"}],
-    "routes": [{ "src": "/(.*)", "dest": "/" }]
+    "routes": [{ "src": "/(.*)", "dest": "/" }],
+    "functions": {
+        "index.js": {
+            "memory": 128,
+            "maxDuration": 10
+        }
+    }
 }
